Updated exit button z-index issue.

--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,14 @@ html {
 }
 html,
 body {
-  font-family: 'Roboto', arial, sans-serif;
+  font-family: 'Roboto', Arial, sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Roboto', Arial, sans-serif;
 }
 h1 {
   font-size: 4rem;
@@ -188,7 +195,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 1;
   background: hsla(0, 0%, 51%, 0.86);
   display: flex;
   justify-content: center;
