--- a/less/global.less
+++ b/less/global.less
@@ -7,11 +7,11 @@
   }
   
   html, body {
-    font-family: 'Roboto', arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
   }
   
   h1, h2, h3, h4, h5 {
-    // font-family: 'Indie Flower', cursive;
+    font-family: 'Roboto', Arial, sans-serif;
   }
   
   h1 {
