--- a/less/navigation.less
+++ b/less/navigation.less
@@ -18,7 +18,7 @@ nav{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 1;
     background: @nav-expand;
     .layout(center, center);
     flex-direction: column;
